# opentimes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  docker-compose.yaml  pyproject.toml
.dvc/: config
.github/actions/build-docker/: action.yaml
.github/actions/fetch-jar/: action.yaml
.github/actions/fetch-locations/: action.yaml
.github/actions/fetch-network/: action.yaml
.github/actions/fetch-network-build-inputs/: action.yaml
.github/actions/fetch-osrm-network/: action.yaml
.github/actions/fetch-valhalla-tiles/: action.yaml
.github/actions/increase-swap/: action.yaml
.github/actions/parse-gh-input/: action.yaml
.github/actions/prep-disk-and-swap/: action.yaml
.github/actions/setup-cloudflare-s3/: action.yaml
.github/actions/setup-dvc/: action.yaml
.github/actions/setup-time-calculation-dependencies/: action.yaml
.github/scripts/: split_origins.py
.github/workflows/: calculate-times.yaml  calculate_times.yaml  create-networks.yaml  create-osrm-networks.yaml  create-public-files.yaml  create-valhalla-tiles.yaml  lychee.yaml  pre-commit.yaml  pypi-publish.yaml  update-data-site.yaml
data/: .Renviron  .Rprofile  .renvignore  Dockerfile  README.md  dvc.yaml  opentimes.Rproj  params.yaml  temp.R  temp.sh  temp2.R  valhalla.json  valhalla_sp.json
data/eda/: add_dvc_files.py  duck.R  tt_map.R
data/jars/: README.md  r5-custom.jar.md5
data/scripts/: add_dvc_files.py  fix_missing.sh
data/site/templates/: index.html
data/src/: calculate_times.R  calculate_times.py  create_blockloc.py  create_cenloc.py  create_census_gpq.py  create_destpoint.py  create_network.R  create_osmclip.py  create_osrmnetwork.sh  create_public_files.py  create_public_site.py  create_tiles.sh  create_times.R  extract_osm.sh  fetch_blockpop.py  fetch_cb.py  fetch_elevation.R  fetch_tiger.py  fetch_water.py  main.py  split_chunks.py  split_origin.py  temp2.R
data/src/tests/: test_utils.py
data/src/utils/: census.py  cloudflare.py  constants.py  datasets.py  duckdb.py  inventory.py  logging.py  times.py  utils.R  utils.py
generate/: dvc.yaml
generate/src/: fetch_tiger.py
site/: eslint.config.js  hugo.toml  package-lock.json  package.json
site/assets/css/: main.scss
site/assets/js/: details.js  map.js
site/content/: about.md  data.md
site/layouts/: index.html
site/layouts/_default/: baseof.html  single.html
site/layouts/partials/: head.html  (+1 more)
terraform/: cloudflare-dns.tf  cloudflare-pages.tf  cloudflare-r2.tf  cloudflare-rulesets.tf  main.tf  variables.tf
