[project]
name = "travel-times"
version = "0.0.1"
description = """
Data infrastructure to generate national travel times using R5.
"""
keywords = ["data engineering", "travel times", "spatial access"]
authors = [
  {name = "Dan Snow", email = "dan@sno.ws"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dvc==3.55.2",
  "pandas==2.2.3",
  "python-dotenv==1.0.1",
  "pyarrow==17.0.0",
  "requests==2.32.3"
]

[tool.ruff]
line-length = 79
