[project]
name = "opentimes"
version = "0.0.1"
description = """
Free travel times between U.S. Census geographies
"""
keywords = ["data engineering", "travel times", "spatial access"]
authors = [
  {name = "Dan Snow", email = "dan@sno.ws"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dvc[s3]==3.55.2",
  "pandas==2.2.3",
  "python-dotenv==1.0.1",
  "pyarrow==17.0.0",
  "requests==2.32.3"
]

[tool.ruff]
line-length = 79
